fixed logo overflow in mobile devices

--- a/style.css
+++ b/style.css
@@ -9,9 +9,16 @@ body {
   color: #ffffff;
 }
 
-@media (min-width: 1200px) {
+
+@media (min-width: 320px) {
   #logo {
-    height: 2.5rem;
-    width: auto;
+    height: 2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  #logo {
+    height: 2.6rem;
+    margin-right: 10px;
   }
 }
